--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="png" href="./public/img/management.png" />
+    <link rel="icon" type="png" href="./public/img/time-management.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tesk Maneger</title>
   </head>
